# hbcomp

./: .gitignore  LICENSE  README.md  compile_trans.sh  db.sqlite  dev.requirements.pip  factories.py  init_trans.sh  manage.py  requirements.pip  setup.cfg  setup.py  test.requirements.pip  update_trans.sh
.github/workflows/: pythonapp.yml
hbapp/: __init__.py  app.py  config.py  config_local.py.template  ext.py  models.py  secrets.py
hbapp/auth/: __init__.py  service.py  services.py  utils.py  views.py
hbapp/comp/: forms.py  views.py
hbapp/home/: __init__.py  views.py
hbapp/pages/: contact.html.md
hbapp/profile/: __init__.py  forms.py  views.py
hbapp/templates/: base.html  flatpage.html  index.html
hbapp/templates/auth/: select.html
hbapp/templates/comp/: details.html  form.html
hbapp/templates/errors/: 403.html  404.html
hbapp/templates/macros/: bootstrap.html  forms.html  pagination.html
hbapp/templates/profile/: details.html
hbapp/utils/: email.py  forms.py  sqla.py
src/hbcomp/: __init__.py  app.py  cli.py  config.py  config_local.py.template  ext.py  models.py
src/hbcomp/auth/: __init__.py  utils.py  views.py
src/hbcomp/comp/: __init__.py  forms.py  views.py
src/hbcomp/home/: __init__.py
src/hbcomp/pages/: about.html.md
src/hbcomp/profile/: __init__.py
src/hbcomp/static/css/: app.css
src/hbcomp/templates/: base.html  index.html
src/hbcomp/templates/auth/: select.html
src/hbcomp/templates/comp/: form.html
src/hbcomp/templates/errors/: 404.html
src/hbcomp/utils/: app.py  http.py  pagination.py  sqla.py
(+1 files in other folders)
