[metadata]
license_files = 
    LICENSE

[tool:pytest]
norecursedirs = .* *.egg* build dist

[tool:isort]
multi_line_output = 5
include_trailing_comma = true
combine_as_imports = true
line_length = 88

[coverage:run]
omit =
    tests/*
    docs/*

[flake8]
max-line-length = 88

[extract_messages]
keywords = lazy_gettext
mapping_file = babel.cfg
width = 80
output_file = src/hbcomp/translations/messages.pot
input_dirs = src/hbcomp

[init_catalog]
domain = messages
input_file = src/hbcomp/translations/messages.pot
output_dir = src/hbcomp/translations

[compile_catalog]
domain = messages
directory = src/hbcomp/translations

[update_catalog]
domain = messages
output_dir = src/hbcomp/translations
input_file = src/hbcomp/translations/messages.pot
